Set services.bl01t-di-cam-01={'enabled': True, 'targetRevision': 'detector-changes'} in apps/values.yaml

--- a/apps/values.yaml
+++ b/apps/values.yaml
@@ -32,4 +32,4 @@ services:
     targetRevision: main
   bl01t-di-cam-01:
     enabled: true
-    targetRevision: main
+    targetRevision: detector-changes
